# qt_serialtool

./: CMakeLists.txt  codeconvert.hpp  main.cpp  widgets.cpp  widgets.h
